---------------------------------------------------------------------------------------------------
Version: 0.3.13
Date: 2025-05-02
  Features:
    - Added water freezing recipe
  Changes:
    - Changed recipes for recipes in cryogenic tech branch
    - Breeder reactor now requires fluoroketone for creating isotopes
  Bugfixes:
    - Icons of nuclear fuel rods were not shown correctly
---------------------------------------------------------------------------------------------------
Version: 0.3.12
Date: 2025-04-25
  Features:
    - Added many nuclear isotopes with decay chains (spoiling :3)
    - Added thorium fuel and MOX fuel
  Changes:
    - Changed covarex enrichment
    - Better visibility for arrows in some recipe icons
  Bugfixes:
    - Fixed sulfur dioxide recipe
    - Fixed some buildings with different fluid inputs
    - Diamond recipe was uncorrectly producing alumina as byproduct
---------------------------------------------------------------------------------------------------
Version: 0.3.11
Date: 2025-04-18
  Features:
    - Added gas power station
    - Added japanese localization thanks to Snow Note
  Changes:
    - Updated some building icons
  Compatibility:
    - Fix for generating icons for venting fluids when using multiple mods thanks to Andromeda
  Bugfixes:
    - Fix that frozen items can be used as nutrients for biochamber and greenhouse
    - Fixed recipes that have more than 2 fluid inputs or outputs for the big crusher (eg palladium recipe)
    - Fixed recipe chain for optical sensor
---------------------------------------------------------------------------------------------------
Version: 0.3.10
Date: 2025-04-11
  Features:
    - Added freezing and thawing recipes
    - Added recipes for creating spoilage
    - Added locale for subgroups and categories
  Changes:
    - Herbarium requires nutrients just like biochamber
    - Updated natric acid recipe chain
  Bugfixes:
    - Fixed algae-spore recipe